--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Åwªï¥úÁ{</title>
+    <title>æ­¡è¿Žå…‰è‡¨</title>
   </head>
   <body>
-    <h1>¶Ù¡A§A¦n</h1>
+    <h1>å—¨ï¼Œä½ å¥½</h1>
   </body>
 </html>
