--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Åwªï¥úÁ{</title>
+    <meta charset="UTF-8">
+    <title>æ­¡è¿Žå…‰è‡¨</title>
   </head>
   <body>
-    <h1>¶Ù¡A§A¦n</h1>
+    <h1>å—¨ï¼Œä½ å¥½</h1>
   </body>
 </html>
